Closed Bug 509660 Opened 16 years ago Closed 16 years ago

Clicking the green zoom button doesn't persist the window's position

Categories

(Core :: XUL, defect)

All
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2b1

People

(Reporter: mstange, Assigned: mstange)

Details

Attachments

(1 file)

Attached patch v1Splinter Review
STR (Mac only): 1. Open a browser window, 2. make it small and center it on the screen and 3. click the green zoom button. Now the window maximizes, i.e. it changes both size and position. 4. Press Cmd+N. Expected results: The new window should open in the same rect as the current window. Actual results: The size is right, but the position is still somewhere to the bottom right. This is extracted from bug 429954 comment 4 part A step 3.
Attachment #393715 - Flags: review?(neil)
Comment on attachment 393715 [details] [diff] [review] v1 Ironically I found some completely different STR on Windows which this seems to fix. Like any decent OS, Windows allows you to resize a window from the topleft. The window reopens with the new size but however at the old position. This patch fixes that :-)
Attachment #393715 - Flags: review?(neil) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2b1
Component: XP Toolkit/Widgets: XUL → XUL
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: