Bug 509660 - Also persist the position of the window when its size changes, since the position might have changed, too. r=neil